# kaspa-ng

./: .gitignore  Cargo.toml  README.md  REAPPLY_FIXES.md  RELEASE_NOTES.md  llvm.sh  package-lock.json
.cargo/: config.toml
.github/workflows/: ci.yaml  deploy.yaml  release.yaml
K-indexer/K-database-cleaner/: Cargo.toml
K-indexer/K-transaction-processor/: Cargo.toml
K-indexer/K-transaction-processor/src/: k_protocol.rs  transaction_reindex_service.rs  worker.rs
K-indexer/K-webserver/src/: api_handlers.rs  database_postgres_impl.rs  main.rs  models.rs  web_server.rs
K/src/contexts/: AuthContext.tsx
K/src/services/: kaspaService.ts
Kasia/: package.json  vite.config.ts
Kasia/src/: init.ts
Kasia/src-tauri/: tauri.conf.json
Kasia/src/components/Layout/: Header.tsx  IndexerConnectionBadge.tsx  ResizableAppContainer.tsx
Kasia/src/components/Modals/: LockedSettingsModal.tsx
Kasia/src/service/: account-service.ts  block-processor-service.ts  sender-and-acceptance-resolution-service.ts  wallet-storage-service.ts
Kasia/src/store/: network.store.ts  session.store.ts  wallet.store.ts
Kasia/src/utils/: indexer-settings.ts
Kasia/vendors/tauri-plugin-biometry/: index.d.ts  index.js  package.json
Loader/: README.md
app/: Cargo.toml  build.rs  index.html
app/src/: main.rs
core/: Cargo.toml  build.rs
core/resources/i18n/: i18n.json
core/resources/packaging/: kaspa-ng.desktop
core/src/: app.rs  core.rs  fonts.rs  imports.rs  lib.rs  menu.rs  network.rs  settings.rs  status.rs
core/src/egui/: extensions.rs
core/src/modules/: account_create.rs  block_dag.rs  cpu_miner_logs.rs  database.rs  explorer.rs  export.rs  import.rs  k_social.rs  kasia.rs  kasvault.rs  logs.rs  metrics.rs  mod.rs  overview.rs  rk_blocks.rs  rk_bridge_logs.rs  rothschild_logs.rs  wallet_create.rs  wallet_open.rs  wallet_secret.rs  welcome.rs
core/src/modules/account_manager/: overview.rs  processor.rs
core/src/modules/settings/: mod.rs
core/src/primitives/: descriptor.rs  transaction.rs
core/src/runtime/: mod.rs  system.rs
core/src/runtime/services/: cpu_miner.rs  mod.rs  (+10 more)
core/src/tests/: transactions.rs
core/src/utils/: i18n.rs  mod.rs  rothschild.rs  version.rs
cpuminer/src/: client.rs
docs/: web-ui-companion-service.md
explorer/app/: Dashboard.tsx  KasLink.tsx  PageTable.tsx  Tooltip.tsx  app.css  root.tsx  routes.ts
explorer/app/api/: urls.ts
explorer/app/context/: AddressLabelProvider.tsx
explorer/app/footer/: Footer.tsx
explorer/app/header/: DesktopMenu.tsx  LastUpdated.tsx  MobileMenu.tsx  SearchBox.tsx
explorer/app/hooks/: useAddressBalanceFlow.ts  useAddressDistribution.ts  useAddressTxCount.ts  useBlockByBlueScore.ts  useIncomingBlocks.ts  useMempool.ts  useMinerSummary.ts  useNetworkCounts.ts  useTopAddresses.ts
explorer/app/layout/: Card.tsx  FooterHelper.tsx  VProgsHashLine.tsx
explorer/app/routes/: addressdetails.tsx  addresses.tsx  analytics.tsx  blockdetails.tsx  distribution.tsx  miners.tsx  rest-api.tsx  transactiondetails.tsx
extensions/chrome/: Cargo.toml
extensions/chrome/src/: imports.rs  lib.rs
kasia-indexer/indexer/src/: config.rs  main.rs
kaspa-explorer-ng/: package-lock.json  package.json  vite.config.ts
kaspa-explorer-ng/app/: Dashboard.tsx  KasLink.tsx  PageTable.tsx  app.css  root.tsx  routes.ts
kaspa-explorer-ng/app/api/: config.ts  kaspa-api-client.ts  socket.ts
kaspa-explorer-ng/app/context/: MarketDataProvider.tsx
kaspa-explorer-ng/app/footer/: Footer.tsx
kaspa-explorer-ng/app/header/: DesktopMenu.tsx  Header.tsx  MobileMenu.tsx  SearchBox.tsx
kaspa-explorer-ng/app/hooks/: useAddressBalance.ts  useAddressDistribution.ts  useAddressNames.ts  useAddressTxCount.ts  useAddressUtxos.ts  useBlockById.ts  useBlockDagInfo.ts  useBlockReward.ts  useCoinSupply.ts  useFeeEstimate.ts  useHalving.ts  useHashrate.ts  useIncomingBlocks.ts  useMempool.ts  useSocketCommand.ts  useSocketRoom.ts  useTopAddresses.ts  useTransactionById.ts  useTransactionCount.ts  useTransactions.ts  useTransactionsCount.ts  useTransactionsSearch.ts
kaspa-explorer-ng/app/routes/: addressdetails.tsx  analytics.tsx  blockdetails.tsx  blocks.tsx  mempool.tsx  miners.tsx  transactiondetails.tsx  transactions.tsx  txs.tsx  txsdetails.tsx
kaspa-explorer-ng/app/utils/: kaspa.ts  storage.ts
kaspa-rest-server/: constants.py  main.py  pyproject.toml  server.py
kaspa-rest-server/endpoints/: __init__.py  get_address_distribution.py  get_address_top.py  get_address_transactions.py  get_address_transactions_count.py  get_addresses_active_count.py  get_balance.py  get_blockdag.py  get_blocks.py  get_circulating_supply.py  get_halving.py  get_transaction_mass.py  get_transactions.py  get_transactions_count.py  get_utxos.py  get_virtual_chain.py
kaspa-rest-server/endpoints/kaspad_requests/: submit_transaction_request.py
kaspa-rest-server/helper/: KeyValueStore.py  __init__.py
kaspa-rest-server/kaspad/: KaspadClient.py  KaspadMultiClient.py  KaspadRpcClient.py  KaspadThread.py
kaspa-socket-server/: Pipfile  main.py  server.py
kaspa-socket-server/kaspad/: KaspadClient.py  KaspadMultiClient.py  KaspadThread.py
kaspa-socket-server/sockets/: __init__.py  blockdag.py  bluescore.py  coinsupply.py  mempool.py  mempool_live.py
rusty-kaspa/: Cargo.toml
rusty-kaspa/bridge/src/: share_handler.rs
rusty-kaspa/rothschild/src/: main.rs
rusty-kaspa/rpc/core/: Cargo.toml
scripts/: build-linux-appimage.sh  build-windows-msi.ps1  fetch-postgres-runtime.ps1  fetch-postgres-runtime.sh  fetch-python-runtime.ps1  fetch-python-runtime.sh  local-artifact-sim.ps1  local-artifact-sim.sh  local-ci-checks.sh  local-linux-ci-sim.sh  macos-bundle.sh  nvidia.sh  patch-rusty-kaspa-workflow-perf-monitor.sh  stage-postgres-runtime.ps1  stage-postgres-runtime.sh  stage-python-runtime.ps1  stage-python-runtime.sh  sync-external-repos.sh  verify-linux-artifact.sh  verify-self-hosted-python-runtime.ps1  verify-self-hosted-python-runtime.sh
simply-kaspa-indexer/: Cargo.toml
simply-kaspa-indexer/cli/: build.rs
simply-kaspa-indexer/mapping/src/: blocks.rs
(+7 files in other folders)
