[workspace]
resolver = "2"
members = [
    "app",
    "core",
    "macros",
    "extensions/chrome",
]
default-members = ["app", "core"]

[workspace.package]
rust-version = "1.88.0"
version = "1.1.0-rc.3"
authors = ["ASPECTRON Inc.","Kaspa Developers"]
license = "PROPRIETARY"
edition = "2024"
repository = "https://github.com/aspectron/kaspa-ng"
include = ["**/*"]

[workspace.lints.clippy]
empty_docs = "allow"
uninlined_format_args = "allow"

[workspace.dependencies]

kaspa-ng = { version = "1.1.0-rc.3", path = "app/", default-features = false }
kaspa-ng-core = { version = "1.1.0-rc.3", path = "core/", default-features = false }
kaspa-ng-macros = { version = "1.1.0-rc.3", path = "macros/", default-features = false }

# ___________________
#  ____ ____ _  _ _ 
#  |___ | __ |  | | 
#  |___ |__] |__| | 
# ___________________

egui = "=0.31.1"
epaint = "=0.31.1"
egui_plot = "=0.32.1"
egui_extras = { version = "=0.31.1", features = ["svg","image"] }
eframe = { version = "=0.31.1",  default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

egui-phosphor = { version = "=0.9.0", features = ["thin","light","regular","bold"] }
egui-notify = { version = "=0.19.0"}
criterion = { version = "0.5.1", default-features = false }
wasm-bindgen-test = "0.3.50"
bs58 = { version = "0.5.0", features = ["check"], default-features = false }


# egui =  { path="../egui/crates/egui", version="=0.28.1"}
# epaint =  { path="../egui/crates/epaint"}
# # epaint = "=0.28.1"
# egui_plot = "=0.28.1"
# # egui_plot = { path="../egui/crates/egui_plot"}
# egui_extras = { path="../egui/crates/egui_extras", features = ["svg","image", "serde"] }
# eframe = { path="../egui/crates/eframe", default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ] }
# egui-phosphor = { path = "../egui-phosphor", version = "=0.6.0", features = ["thin","light","regular","bold"] }
# egui-notify = { path = "../egui-notify" }
# egui-toast = { path = "../egui-toast" }

# egui = { git = "https://github.com/aspectron/egui", branch = "gamma"}
# epaint =  { git = "https://github.com/aspectron/egui", branch = "gamma"}

# egui_plot = { git = "https://github.com/aspectron/egui_plot", branch = "gamma"}
# egui_extras = { git = "https://github.com/aspectron/egui", branch = "gamma", features = ["svg","image", "serde"] }
# eframe = { git = "https://github.com/aspectron/egui", branch = "gamma",  default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ] }
# egui-phosphor = { git = "https://github.com/aspectron/egui-phosphor", branch = "gamma",  version = "=0.6.0", features = ["thin","light","regular","bold"] }
# egui-notify = { git = "https://github.com/aspectron/egui-notify",  branch = "gamma"}
# egui-toast = { git = "https://github.com/aspectron/egui-toast", branch = "omega" }

# egui = { path = "../egui/crates/egui" }
# egui_extras = { path = "../egui/crates/egui_extras", features = ["svg", "image"] }
# eframe = { path = "../egui/crates/eframe", default-features = false, features = [
#     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
#     "default_fonts", # Embed the default egui fonts.
#     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
#     "persistence",   # Enable restoring app state when restarting the app.
# ] }
# egui-phosphor = { path = "../egui-phosphor", features = ["thin","light","regular","bold"] }
# egui-notify = { path = "../egui-notify" }
# egui-toast = { path = "../egui-toast" }

# _______________________________________________________
#  ____ _  _ ____ ___ _   _    _  _ ____ ____ ___  ____ 
#  |__/ |  | [__   |   \_/  __ |_/  |__| [__  |__] |__| 
#  |  \ |__| ___]  |    |      | \_ |  | ___] |    |  | 
# _______________________________________________________

# kaspa-addresses = "0.13.4"
# kaspa-alloc = "0.13.4"
# kaspa-bip32 = "0.13.4"
# kaspa-cli = "0.13.4"
# kaspa-consensus-core = "0.13.4"
# kaspa-core = "0.13.4"
# kaspa-metrics-core = "0.13.4"
# kaspa-notify = "0.13.4"
# kaspa-rpc-core = "0.13.4"
# kaspa-rpc-service = "0.13.4"
# kaspa-utils = "0.13.4"
# kaspa-wallet-core = "0.13.4"
# kaspa-wrpc-client = "0.13.4"
# kaspa-wrpc-server = "0.13.4"
# kaspad = "0.13.4"

kaspa-addresses = { path = "rusty-kaspa/crypto/addresses" }
kaspa-alloc = { path = "rusty-kaspa/utils/alloc" }
kaspa-bip32 = { path = "rusty-kaspa/wallet/bip32" }
kaspa-cli = { path = "rusty-kaspa/cli" }
kaspa-consensus-core = { path = "rusty-kaspa/consensus/core" }
kaspa-core = { path = "rusty-kaspa/core" }
kaspa-metrics-core = { path = "rusty-kaspa/metrics/core" }
kaspa-notify = { path = "rusty-kaspa/notify" }
kaspa-rpc-core = { path = "rusty-kaspa/rpc/core" }
kaspa-rpc-service = { path = "rusty-kaspa/rpc/service" }
kaspa-utils = { path = "rusty-kaspa/utils" }
kaspa-wallet-core = { path = "rusty-kaspa/wallet/core" }
kaspa-wallet-keys = { path = "rusty-kaspa/wallet/keys" }
kaspa-wrpc-client = { path = "rusty-kaspa/rpc/wrpc/client" }
kaspa-wrpc-server = { path = "rusty-kaspa/rpc/wrpc/server" }
kaspa-txscript = { path = "rusty-kaspa/crypto/txscript" }
kaspad = { path = "rusty-kaspa/kaspad" }

# kaspa-addresses = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-alloc = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-bip32 = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-cli = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-consensus-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-metrics-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-notify = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-rpc-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-rpc-service = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-utils = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-wallet-core = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-wallet-keys = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-wrpc-client = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-wrpc-server = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspa-txscript = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }
# kaspad = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "sigma" }

# kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-alloc = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-cli = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-metrics-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-rpc-service = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-wrpc-server = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspad = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master" }
# kaspa-addresses = { git = "https://github.com/aspectron/rusty-kaspa.git", branch = "gamma" }

# _________________________________________________________
#  _ _ _ ____ ____ _  _ ____ _    ____ _ _ _    ____ ____ 
#  | | | |  | |__/ |_/  |___ |    |  | | | | __ |__/ [__  
#  |_|_| |__| |  \ | \_ |    |___ |__| |_|_|    |  \ ___] 
# _________________________________________________________

workflow-core = "0.18.0"
workflow-i18n = "0.18.0"
workflow-chrome = "0.18.0"
workflow-dom = "0.18.0"
workflow-http = { version = "0.18.0", default-features = false, features = ["rustls-tls-webpki-roots", "http2", "charset", "macos-system-configuration"] }
workflow-log = "0.18.0"
workflow-store = "0.18.0"
workflow-wasm = "0.18.0"

# workflow-core = { path = "../workflow-rs/core" }
# workflow-i18n = { path = "../workflow-rs/i18n" }
# workflow-chrome = { path = "../workflow-rs/chrome" }
# workflow-dom = { path = "../workflow-rs/dom" }
# workflow-http = { path = "../workflow-rs/http" }
# workflow-log = { path = "../workflow-rs/log" }
# workflow-store = { path = "../workflow-rs/store" }
# workflow-wasm = { path = "../workflow-rs/wasm" }

# workflow-core = {  git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master", features = ["no-unsafe-eval"] }
# workflow-i18n = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-chrome = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-dom = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-http = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-log = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-store = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-wasm = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }

# ----------------------------------------
# ----------------------------------------
# ----------------------------------------

ahash = "0.8.6"
async-trait = "0.1.88"
borsh = { version = "1.5.1", features = ["derive", "rc"] }
cfg-if = "1.0.0"
chrome-sys = "0.2.0"
# chrome-sys = {path = "../chrome-sys"}
chrono = "0.4.31"
clap = { version = "4.5.35", features = ["derive", "string", "cargo"] }
convert_case = "0.6.0"
crypto_box = { version = "0.9.1", features = ["chacha20"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
derivative = "2.2.0"
downcast = "0.11.0"
downcast-rs = "1.2.0"
env_logger = "0.10"
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29", default-features = false, features = ["alloc"] }
image = { version = "0.24.7", default-features = false, features = ["png"] }
js-sys = "0.3.70"
log = "0.4.20"
nix = { version = "0.28.0", features = ["signal"]}
num_cpus = "1.16.0"
open = "5.0.1"
pad = "0.1.6"
passwords = "3.1.16"
qrcode = "0.12.0"
rand = "0.8.5"
rfd = "0.14.1"
ritehash = "0.2.0"
rlimit = "0.10.1"
separator = "0.4.1"
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.107"
slug = "0.1.5"
smallvec = { version = "1.11.1", features = ["serde", "const_generics"] }
sysinfo = "0.31.2"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["sync", "rt-multi-thread", "process"] }
toml = "0.8.8"
walkdir = "2.4.0"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ['Window'] }
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
zeroize = { version = "1.6.0", default-features = false, features = ["alloc"] }

# --- rusty-kaspa workspace deps (auto)
kaspa-testing-integration = { path = "rusty-kaspa/testing/integration" }
kaspa-addressmanager = { path = "rusty-kaspa/components/addressmanager" }
kaspa-connectionmanager = { path = "rusty-kaspa/components/connectionmanager" }
kaspa-consensus = { path = "rusty-kaspa/consensus" }
kaspa-consensus-client = { path = "rusty-kaspa/consensus/client" }
kaspa-consensus-notify = { path = "rusty-kaspa/consensus/notify" }
kaspa-consensus-wasm = { path = "rusty-kaspa/consensus/wasm" }
kaspa-consensusmanager = { path = "rusty-kaspa/components/consensusmanager" }
kaspa-daemon = { path = "rusty-kaspa/daemon" }
kaspa-database = { path = "rusty-kaspa/database" }
kaspa-grpc-client = { path = "rusty-kaspa/rpc/grpc/client" }
kaspa-grpc-core = { path = "rusty-kaspa/rpc/grpc/core" }
kaspa-grpc-server = { path = "rusty-kaspa/rpc/grpc/server" }
kaspa-hashes = { path = "rusty-kaspa/crypto/hashes" }
kaspa-index-core = { path = "rusty-kaspa/indexes/core" }
kaspa-index-processor = { path = "rusty-kaspa/indexes/processor" }
kaspa-math = { path = "rusty-kaspa/math" }
kaspa-merkle = { path = "rusty-kaspa/crypto/merkle" }
kaspa-mining = { path = "rusty-kaspa/mining" }
kaspa-mining-errors = { path = "rusty-kaspa/mining/errors" }
kaspa-muhash = { path = "rusty-kaspa/crypto/muhash" }
kaspa-p2p-flows = { path = "rusty-kaspa/protocol/flows" }
kaspa-p2p-lib = { path = "rusty-kaspa/protocol/p2p" }
kaspa-p2p-mining = { path = "rusty-kaspa/protocol/mining" }
kaspa-perf-monitor = { path = "rusty-kaspa/metrics/perf_monitor" }
kaspa-pow = { path = "rusty-kaspa/consensus/pow" }
kaspa-rpc-macros = { path = "rusty-kaspa/rpc/macros" }
kaspa-txscript-errors = { path = "rusty-kaspa/crypto/txscript/errors" }
kaspa-utils-tower = { path = "rusty-kaspa/utils/tower" }
kaspa-utxoindex = { path = "rusty-kaspa/indexes/utxoindex" }
kaspa-wallet = { path = "rusty-kaspa/wallet/native" }
kaspa-wallet-cli-wasm = { path = "rusty-kaspa/wallet/wasm" }
kaspa-wallet-pskt = { path = "rusty-kaspa/wallet/pskt" }
kaspa-wallet-macros = { path = "rusty-kaspa/wallet/macros" }
kaspa-wasm = { path = "rusty-kaspa/wasm" }
kaspa-wasm-core = { path = "rusty-kaspa/wasm/core" }
kaspa-wrpc-proxy = { path = "rusty-kaspa/rpc/wrpc/proxy" }
kaspa-wrpc-wasm = { path = "rusty-kaspa/rpc/wrpc/wasm" }
kaspa-wrpc-example-subscriber = { path = "rusty-kaspa/rpc/wrpc/examples/subscriber" }
aes = "0.8.3"
arc-swap = "1.6.0"
argon2 = "0.5.2"
async-channel = "2.0.0"
async-std = { version = "1.12.0", features = ["attributes"] }
async-stream = "0.3.5"
base64 = "0.22.1"
bincode = { version = "1.3.3", default-features = false }
bitflags = "2.9.4"
blake2b_simd = "1.0.2"
bytes = "1.7.1"
cc = "1.0.83"
cfb-mode = "0.8.2"
chacha20poly1305 = "0.10.1"
crossbeam-channel = "0.5.8"
dashmap = "6.0.1"
derive_builder = "0.20.0"
derive_more = "0.99.17"
dhat = "0.3.2"
dirs = "5.0.1"
duration-string = "0.4.0"
enum-primitive-derive = "0.3.0"
event-listener = "2.5.3"
evpkdf = "0.2.0"
faster-hex = "0.9.0"
fixedstr = { version = "0.5.4", features = ["serde"] }
flate2 = "1.0.28"
getrandom = { version = "0.2.10", features = ["js"] }
h2 = "0.4.6"
heapless = "0.8.0"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4.1"
hexplay = "0.3.0"
hmac = { version = "0.12.1", default-features = false }
home = "0.5.5"
http-body = "1.0.1"
http-body-util = "0.1.2"
igd-next = { version = "0.14.2", features = ["aio_tokio"] }
indexmap = "2.1.0"
intertrait = "0.2.2"
ipnet = "2.9.0"
itertools = "0.13.0"
keccak = "0.1.4"
local-ip-address = "0.6.1"
log4rs = "1.2.0"
mac_address = "1.1.7"
malachite-base = "0.4.4"
malachite-nz = "0.4.4"
md-5 = "0.10.6"
num = "0.4.1"
num-traits = "0.2.17"
once_cell = "1.18.0"
parking_lot = "0.12.1"
paste = "1.0.15"
pbkdf2 = "0.12.2"
portable-atomic = { version = "1.5.1", features = ["float"] }
prost = "0.13.2"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
rand_distr = "0.4.3"
rayon = "1.8.0"
regex = "1.10.2"
ripemd = { version = "0.1.3", default-features = false }
rocksdb = "0.24.0"
rv = "0.16.4"
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }
seqlock = "0.2.0"
serde_bytes = "0.11.12"
serde_nested_with = "0.2.5"
serde_repr = "0.1.18"
serde-value = "0.7.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
slugify-rs = "0.0.3"
sorted-insert = "0.2.3"
subtle = { version = "2.5.0", default-features = false }
tempfile = "3.8.1"
textwrap = "0.16.0"
tokio-stream = "0.1.14"
tonic = { version = "0.12.3", features = ["tls-webpki-roots", "gzip", "transport"] }
tonic-build = { version = "0.12.3", features = ["prost"] }
triggered = "0.1.2"
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "serde", "js"] }
pin-project-lite = "0.2.13"
tower-http = { version = "0.5.2", features = ["map-response-body", "map-request-body"] }
tower = "0.5.1"
indexed_db_futures = "0.5.0"
workflow-perf-monitor = "0.0.2"
nw-sys = "0.1.6"
rustls = { version = "0.23", features = ["ring"], default-features = false }
workflow-d3 = { version = "0.18.0" }
workflow-node = { version = "0.18.0" }
workflow-nw = { version = "0.18.0" }
workflow-rpc = { version = "0.18.0", features = ["rustls-tls-webpki-roots"], default-features = false }
workflow-serializer = { version = "0.18.0" }
workflow-terminal = { version = "0.18.0" }
# --- end rusty-kaspa workspace deps

[profile.release]
opt-level = 2
# lto = true
# opt-level = 3

[profile.native-release]
inherits = "release"
opt-level = 3
# lto = true
# strip = true

[profile.console]
inherits = "release"
opt-level = 2
strip = false
# lto = true
# strip = true
